--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="page1.css">
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li>About</li>
+        <li>Poetry</li>
+        <li>Photography</li>
+    </ul>
+</nav>
+<p>lorum ipsum</p>
 </body>
 </html>
