--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <li>Photography</li>
     </ul>
 </nav>
+<img src="images/Asset%201.png" alt="logo">
+<div id=body>
 <p>lorum ipsum</p>
+<div id= image>
+<img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.png" alt="picture of me">
+    </div>
+    </div>
 </body>
 </html>
