--- a/photography.html
+++ b/photography.html
@@ -2,26 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio Website</title>
+    <title>Document</title>
     <link rel="stylesheet" href="page1.css">
 </head>
 <body>
-<nav>
+    <nav>
     <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="poetry.html">Poetry</a></li>
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
-<div id=intro>
-<h1>Ren</h1>
-<img src="images/Asset%201.png" alt="logo">
-</div>
-<div id=body>
-<p>lorum ipsum</p>
-<div id=image>
-<img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.png" alt="picture of me" height="487px" width="487px">
-    </div>
-    </div>
 </body>
 </html>
