--- a/photography.html
+++ b/photography.html
@@ -13,5 +13,14 @@
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
+<div id=dress>
+<img src="images/Dress.JPG" alt="Dress" height="487px">
+<p> lorum ipsum </p>
+</div>
+<div id=beach>
+<img src="images/beach.JPG" alt="Beach" height="487px">
+<p>lorum ipsum</p>
+    </div>
+
 </body>
 </html>
