--- a/photography.html
+++ b/photography.html
@@ -14,11 +14,15 @@
     </ul>
 </nav>
 <div id=dress>
+<div id=help>
 <img src="images/Dress.JPG" alt="Dress" height="487px">
+</div>
 <p> lorum ipsum </p>
 </div>
 <div id=beach>
+<div id=helpme>
 <img src="images/beach.JPG" alt="Beach" height="487px">
+</div>
 <p>lorum ipsum</p>
     </div>
 
