--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,14 @@
 </head>
 <body>
 <nav>
-    <ul>
+    <ul id=delay>
         <li><a href="index.html">About</a></li>
         <li><a href="poetry.html">Poetry</a></li>
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
 <div id=intro>
+
 <h1>Ren</h1>
 <img src="images/Asset%201.png" alt="logo">
 </div>
