--- a/photography.html
+++ b/photography.html
@@ -15,13 +15,13 @@
 </nav>
 <div id=dress>
 <div id=help>
-<img src="images/Dress.JPG" alt="Dress" height="487px">
+<img src="images/Dress1.jpg" alt="Dress" height="487px">
 </div>
 <p> lorum ipsum </p>
 </div>
 <div id=beach>
 <div id=helpme>
-<img src="images/beach.JPG" alt="Beach" height="487px">
+<img src="images/beach1.jpg" alt="Beach" height="487px">
 </div>
 <p>lorum ipsum</p>
     </div>
