commit your gits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id=body>
 <p>lorum ipsum</p>
 <div id=image>
-<img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.jpg" alt="picture of me" height="487px" width="487px">ss
+<img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.jpg" alt="picture of me" height="487px" width="487px">
     </div>
     </div>
 </body>
