--- a/photography.html
+++ b/photography.html
@@ -26,5 +26,29 @@
 <p>lorum ipsum</p>
     </div>
 
+<div id=pine>
+<div id=helpful>
+<img src="images/pine.jpg" alt="Pine" height="487px">
+</div>
+<p>lorum ipsum</p>
+</div>
+<div id= berries>
+<div id=helpless>
+<img src="images/berries.jpg" alt="Berries" height="487px">
+</div>
+<p>lorum ipsum</p>
+</div>
+<div id=hall>
+    <div id=selfhelp>
+<img src="images/hall.jpg" alt="hall" height="487px">
+    </div>
+    <p>lorum ipsum</p>
+</div>
+<div id=tower>
+    <div id=idk>
+<img src="images/tower.jpg" alt="tower" height="487px">
+    </div>
+    <p>lorum ipsum</p>
+</div>
 </body>
 </html>
