i miss the circus

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <img src="images/Asset%201.png" alt="logo">
 </div>
 <div id=body>
-<p>lorum ipsum</p>
+<p>yee haw</p>
 <div id=image>
 <img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.jpg" alt="picture of me" height="487px" width="487px">
     </div>
