--- a/photography.html
+++ b/photography.html
@@ -13,42 +13,25 @@
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
+<div id=pictures>
 <div id=dress>
-<div id=help>
 <img src="images/Dress1.jpg" alt="Dress" height="487px">
-</div>
-<p> lorum ipsum </p>
-</div>
-<div id=beach>
-<div id=helpme>
-<img src="images/beach1.jpg" alt="Beach" height="487px">
-</div>
-<p>lorum ipsum</p>
     </div>
-
+<div id=beach>
+<img src="images/beach1.jpg" alt="Beach" height="487px">
+    </div>
 <div id=pine>
-<div id=helpful>
 <img src="images/pine.jpg" alt="Pine" height="487px">
 </div>
-<p>lorum ipsum</p>
-</div>
 <div id= berries>
-<div id=helpless>
 <img src="images/berries.jpg" alt="Berries" height="487px">
 </div>
-<p>lorum ipsum</p>
-</div>
 <div id=hall>
-    <div id=selfhelp>
 <img src="images/hall.jpg" alt="hall" height="487px">
-    </div>
-    <p>lorum ipsum</p>
 </div>
 <div id=tower>
-    <div id=idk>
 <img src="images/tower.jpg" alt="tower" height="487px">
-    </div>
-    <p>lorum ipsum</p>
 </div>
+    </div>
 </body>
 </html>
