--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
     <ul id=delay>
         <li><a href="index.html">About</a></li>
-        <li><a href="poetry.html">Poetry</a></li>
+        <li><a href="https://docs.google.com/document/d/1pMgPxUFpdwPkqzXtsmgIx224qFqggZw_aheMf9Sj5z8/edit?usp=sharing">Poetry</a></li>
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
