--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 </head>
 <body>
 <nav>
+<!--   Start of Nav-->
     <ul id=delay>
         <li><a href="index.html">About</a></li>
         <li><a href="https://docs.google.com/document/d/1pMgPxUFpdwPkqzXtsmgIx224qFqggZw_aheMf9Sj5z8/edit?usp=sharing">Poetry</a></li>
         <li><a href="photography.html">Photography</a></li>
     </ul>
+
 </nav>
 <div id=intro>
-
+<!--About me-->
 <h1>Ren</h1>
 <img src="images/Asset%201.png" alt="logo">
-</div>
 <div id=body>
-<p></p>
-<div id=image>
+<p>Hi, I'm Ren. I am a tenth grade Digital Communication Arts major at Cab Calloway School of the Arts. My main intrests are in photography and poetry, however, I have experience in Adobe Photoshop, Adobe Illustrator, Adobe InDesign, HTML 5, and CSS 3. In my poetry I attempt to envoke emotions and thought; in my photography I enjoy the technicality of creating an aesthetically pleaseing picture. I hope you enjoy browsing through my work.</p>
+<div id=karkalicious>
 <img src="images/Screenshot%202019-03-14%20at%201.25.58%20PM.jpg" alt="picture of me" height="487px" width="487px">
+    </div>
     </div>
     </div>
 </body>
