--- a/photography.html
+++ b/photography.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="page1.css">
 </head>
 <body>
+<!--   Start of nav-->
     <nav>
     <ul>
         <li><a href="index.html">About</a></li>
-        <li><a href="poetry.html">Poetry</a></li>
+        <li><a href="https://docs.google.com/document/d/1pMgPxUFpdwPkqzXtsmgIx224qFqggZw_aheMf9Sj5z8/edit?usp=sharing">Poetry</a></li>
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
 <div id=pictures>
+
 <div id=dress>
+<h2>vvfffef</h2>
 <img src="images/Dress1.jpg" alt="Dress" height="487px">
     </div>
 <div id=beach>
