Final commit for real this time

--- a/photography.html
+++ b/photography.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="page1.css">
 </head>
 <body>
-<!--   Start of nav-->
+<!--Start of nav-->
     <nav>
     <ul>
         <li><a href="index.html">About</a></li>
@@ -14,24 +14,34 @@
         <li><a href="photography.html">Photography</a></li>
     </ul>
 </nav>
+<!--End of nav-->
 <div id=pictures>
 <div id=dress>
-<img src="images/Dress1.jpg" alt="Dress" height="487px">
+<img src="images/Dress1.jpg" alt="Dress" height="487px" title="Dress">
     </div>
 <div id=beach>
-<img src="images/beach1.jpg" alt="Beach" height="487px">
+<img src="images/beach1.jpg" alt="Beach" height="487px" title="beach">
     </div>
+<div id=obelisk>
+<img src="images/Obelisk.JPG" alt="Obelisk" height="487px" title="Obelisk">
+</div>
 <div id=pine>
-<img src="images/pine.jpg" alt="Pine" height="487px">
+<img src="images/pine.jpg" alt="Pine" height="487px" title="Pine">
 </div>
 <div id= berries>
-<img src="images/berries.jpg" alt="Berries" height="487px">
+<img src="images/berries.jpg" alt="Berries" height="487px" title="Berries">
 </div>
-<div id=hall>
-<img src="images/hall.jpg" alt="hall" height="487px">
+<div id=cherry>
+<img src="images/Cherryblossoms.JPG" alt="Cherry Blossoms" height="487px" title="Cherry Blossoms">
 </div>
 <div id=tower>
-<img src="images/tower.jpg" alt="tower" height="487px">
+<img src="images/tower.jpg" alt="tower" height="487px" title="Tower">
+</div>
+<div id=hall>
+<img src="images/hall.jpg" alt="hall" height="487px" title="Hall">
+</div>
+<div id=taylor>
+<img src="images/taylor.jpg" alt="taylor" height="487px" title="Taylor">
 </div>
     </div>
 </body>
